# tripsync

./: .dockerignore  .env.example  .gitignore  Dockerfile  build.sh  docker-compose.yml  entrypoint.sh  pyproject.toml  readme.md
auth/: build.sh  requirements.txt
auth/ItenaryMaker/: models.py
auth/auth/: settings.py  urls.py
main/: build.sh  manage.py  requirements.txt
main/Itinerary/migrations/: 0001_initial.py
main/account/: admin.py  backends.py  models.py  otp_service.py  serializers.py  tasks.py  tests.py  urls.py  utils.py  views.py
main/account/migrations/: 0001_initial.py
main/chat/migrations/: 0001_initial.py
main/chatbot/: admin.py  ai_config.py  models.py  serializers.py  urls.py  views.py
main/chatbot/migrations/: 0001_initial.py
main/community/: admin.py  models.py  serializers.py  urls.py  views.py
main/community/migrations/: 0001_initial.py
main/expense/: serializers.py  urls.py
main/expense/migrations/: 0001_initial.py
main/main/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
main/personal/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
main/personal/migrations/: 0001_initial.py
main/templates/emails/: goodbye.html  goodbye_plain.txt  otp_password_reset.html  otp_password_reset_plain.txt  otp_verification.html  otp_verification_plain.txt  welcome.html  welcome_plain.txt
main/trending/: urls.py
main/trending/migrations/: 0001_initial.py
main/tripmate/migrations/: 0001_initial.py
nginx/: nginx.conf
